--- a/css/marshall.css
+++ b/css/marshall.css
@@ -22,7 +22,8 @@ a:hover {
 h1, h2, h3, h4, h5 { margin: 0; padding: 0; line-height: 140%; }
 input, select { -webkit-appearance: none; border-radius: 0; }
 * { outline: none; }
-p { line-height: 140%;  margin: 0; padding: 0; -webkit-font-smoothing: antialiased; }
+p { line-height: 140%;  margin: 0; padding: 0; -webkit-font-smoothing: antialiased;
+    text-shadow: 0px 1px 0px rgba(255,255,255,0.5); }
 img { border: none; display: block; }
 
 
@@ -379,6 +380,12 @@ h1 a {
     float: left;
 }
 
+.content.full-width .main {
+    margin-right: 0;
+    width: 100%;
+    float: none;
+}
+
 .content:after {
     content: "";
     display: table;
@@ -387,6 +394,10 @@ h1 a {
 
 .main .container {
     margin-right: 246px;
+}
+
+.content.full-width .main .container {
+    margin-right: 0;
 }
 
 .mainbox {
@@ -403,6 +414,7 @@ h1 a {
     font-size: 1.3em;
     line-height: 110%;
     padding-bottom: 5px;
+    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
 }
 
 
@@ -451,6 +463,7 @@ h1 a {
     color: #217cc9;
     text-decoration: none;
     display: inline;
+    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
 }
 
 .sidebox.news ul li a:hover {
@@ -510,13 +523,23 @@ h1 a {
 /* homepage hero heading */
 /* ================================================ */
 .main-heading {
+    background: #dcdcdc;
+    color: #444;
     padding: 8px 16px;
-    background: url("../images/home_title_grad.png") top right repeat-y #001649;
+    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
 }
 
 .main-heading h2 {
-    color: #fff000;
     font-size: 1.8em;
+}
+
+.main-heading.hero {
+    background: url("../images/home_title_grad.png") top right repeat-y #001649;
+}
+
+.main-heading.hero h2 {
+    color: #fff000;
+    text-shadow: 0px -1px 0px rgba(0,0,0,.5);
 }
 
 .main-heading p {
@@ -558,6 +581,7 @@ h1 a {
 .carousel .copy p {
     padding-right: 90px;
     padding-bottom: 5px;
+    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
 }
 
 .carousel .copy .big-link {
@@ -721,6 +745,7 @@ h1 a {
 .news-items ol li .detail a {
     color: #217cc9;
     text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
 }
 
 .news-items ol li .detail a:hover {
@@ -754,8 +779,26 @@ h1 a {
 .news-detail p {
     padding-bottom: 10px;
 }
+/* -- */
 
 
+
+
+/* Price & Configure styles */
+/* ================================================ */
+#config_machine .step {
+    background: url("../images/heading-pre.png") top left no-repeat #001649;
+    padding-left: 49px;
+    height: 36px;
+    line-height: 36px;
+    color: #fff;
+    font-size: 1.2em;
+}
+
+#config_machine .step span {
+    color: #fff000;
+    font-size: 1.4em;
+}
 
 
 
@@ -864,6 +907,7 @@ h1 a {
 .footer .address p {
     line-height: 150%;
     padding: 0 15px 8px 15px;
+    text-shadow: none;
 }
 
 .made-by {
