--- a/css/marshall.css
+++ b/css/marshall.css
@@ -4,7 +4,7 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #2e2e2e;
-    font-family: 'Dosis', 'Tahoma', sans-serif;
+    font-family: 'Tahoma', Helvetica, Arial, sans-serif;
 	-webkit-text-size-adjust: none;
     background: url("../images/top-gradient.png") left top repeat-x #ececec;
     font-size: small;
@@ -39,22 +39,38 @@ img {
 
 textarea,
 input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
 select {
     border-radius: 4px;
     background-color: #fff;
-    font-family: 'Dosis', 'Tahoma', sans-serif;
-    padding: 5px 8px;
+    font-family: 'Tahoma', Helvetica, Arial, sans-serif;
+    padding: 6px 10px;
     border: 1px solid #ccc;
     -webkit-appearance: none;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     resize: none;
+    font-size: 1.0em;
+}
+
+.mobile input[type="text"],
+.mobile input[type="email"],
+.mobile input[type="password"],
+.mobile input[type="number"],
+.mobile select {
+    font-size: 1.1em;
 }
 
 select {
-    padding-right: 30px;
-    background: url("../images/bg-select-schveron.jpg") center right no-repeat;
+    background: url("../images/bg-select-schveron.jpg") center right no-repeat #fff;
+    padding: 5px 30px 5px 7px;
+}
+
+.error select {
+    background: url("../images/bg-select-schveron-error.jpg") center right no-repeat #fff;
 }
 
 * { outline: none; }
@@ -366,6 +382,7 @@ h1 a {
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .red-link {
@@ -854,8 +871,10 @@ h1 a {
 }
 
 #config_machine .body {
+
 }
 
+/* step 1 */
 #config_machine .configure {
     padding: 8px 15px;
     background: #fff;
@@ -920,6 +939,7 @@ h1 a {
     right: 15px;
 }
 
+/* step n */
 /* show and hide */
 #config_machine .mainbox .show-hide {
     text-decoration: none;
@@ -950,7 +970,7 @@ h1 a {
     display: none;
 }
 
-
+/* step 2 */
 /* Configure options, responsive using JS */
 /* ================================================ */
 #config_machine .options {
@@ -976,6 +996,9 @@ h1 a {
     -moz-transition: background 0.5s;
     -o-transition: background 0.5s;
     transition: background 0.5s;
+}
+#config_machine .options li:hover {
+    background-color: #fcfcfc;
 }
 #config_machine .options li:hover p {
     color: #000;
@@ -1096,7 +1119,7 @@ h1 a {
 
 
 
-/* Configure table styles */
+/* step 3 */
 #config_machine .basket table {
     width: 100%;
     margin-top: 2px;
@@ -1167,7 +1190,7 @@ h1 a {
     height: 120px;
 }
 
-
+/* step 4 */
 #config_machine .save-print-order .body {
     background: #fff;
     padding: 15px;
@@ -1182,11 +1205,77 @@ h1 a {
     margin-bottom: 5px;
 }
 
+/* step 5 */
+#config_machine .email-option .body {
+    background: #fff;
+    padding: 15px;
+}
 
+#config_machine .email-option .body .column {
+    width: 48%;
+    float: left;
+    padding-bottom: 10px;
+}
 
+#config_machine .email-option .body .right-column {
+    float: right;
+}
 
+#config_machine .email-option label {
+    width: 120px;
+    float: left;
+    padding-top: 5px;
+}
 
+#config_machine .email-option .column p {
+    padding-bottom: 10px;
+    float: left;
+    width: 100%;
+}
 
+#config_machine .email-option .column select,
+#config_machine .email-option .column input {
+    float: left;
+}
+
+#config_machine .email-option .column input {
+    width: 220px;
+}
+
+#config_machine .email-option textarea {
+    width: 315px;
+    float: left;
+    height: 80px;
+}
+
+#config_machine .email-option .body .foot {
+    clear: left;
+    padding-top: 15px;
+    text-align: right;
+    border-top: 1px solid #eaeaea;
+}
+
+#config_machine .email-option .body .foot p {
+    float: left;
+}
+
+/* validation errors */
+#config_machine .email-option .column p .error {
+    color: #BB1F1D;
+    display: none;
+    float: left;
+}
+
+#config_machine .email-option .column p.error select,
+#config_machine .email-option .column p.error input {
+    border: 1px solid #BB1F1D;
+}
+
+#config_machine .email-option .column p.error .error {
+    display: block;
+    margin-left: 120px;
+    font-size: 0.85em;
+}
 
 
 
@@ -1371,6 +1460,30 @@ h1 a {
     .footer {
         margin-bottom: 0;
     }
+
+
+
+
+    /* step 5 */
+    #config_machine .email-option select {
+        margin-right: 40px;
+    }
+
+    #config_machine .email-option label {
+        width: 100%;
+        float: left;
+        padding: 0 0 4px 0;
+    }
+
+    #config_machine .email-option textarea {
+        width: 100%;
+    }
+
+    #config_machine .email-option .column p.error .error {
+        margin-left: 0;
+        clear: left;
+    }
+
 }
 
 
@@ -1549,6 +1662,28 @@ h1 a {
     #config_machine .basket td {
         vertical-align: top;
     }
+
+
+
+    /* step 5 */
+    #config_machine .email-option select {
+        margin-right: 0;
+        width: 100%;
+    }
+
+    #config_machine .email-option label {
+        width: 100%;
+        float: left;
+        padding: 0 0 4px 0;
+        display: none;
+    }
+
+    #config_machine .email-option .column input,
+    #config_machine .email-option textarea {
+        width: 100%;
+    }
+
+
 }
 
 
@@ -1671,6 +1806,25 @@ h1 a {
     .news-detail img {
         width: 100%;
     }
+
+
+    /* step 5 */
+    #config_machine .email-option label {
+        display: none;
+    }
+
+
+    #config_machine .email-option .body .column {
+        width: 100%;
+        float: none;
+        padding-bottom: 0;
+    }
+
+    #config_machine .email-option .body .foot {
+        padding-top: 0;
+        border-top: none;
+    }
+
 
 }
 	
