--- a/css/marshall.css
+++ b/css/marshall.css
@@ -1270,6 +1270,7 @@ h1 a {
 }
 
 /* validation errors */
+/* ROBCURLE In your js validate and add .error class to parent p tag, simples */
 #config_machine .email-option .column p .error {
     color: #BB1F1D;
     display: none;
@@ -1286,11 +1287,6 @@ h1 a {
     margin-left: 120px;
     font-size: 0.85em;
 }
-
-
-
-
-
 
 
 
@@ -1442,6 +1438,30 @@ h1 a {
 
 
 
+
+#basket {
+    position: fixed;
+    top: 159px;
+    right: 0;
+    width: 200px;
+    border: 1px solid #fff;
+    border-right: 0;
+    background-color: #bb1f1d;
+    color: #fff;
+    padding: 10px;
+    -webkit-appearance: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    /*-webkit-transition: top 0.5s;*/
+    /*-moz-transition: top 0.5s;*/
+    /*-o-transition: top 0.5s;*/
+    /*transition: top 0.5s;*/
+}
+
+
+
+
 /* media queries */
 /* ================================================ */
 @media only screen and (max-width: 1000px){
@@ -1554,6 +1574,17 @@ h1 a {
 
     #config_machine .options li {
         width: 50%;
+    }
+
+
+
+    #basket {
+        top: inherit;
+        left: 0;
+        bottom: 0;
+        border: none;
+        border-top: 1px solid #fff;
+        width: 100%;
     }
 }
 
@@ -1676,21 +1707,27 @@ h1 a {
 
 
     /* step 5 */
-    #config_machine .email-option select {
-        margin-right: 0;
-        width: 100%;
-    }
-
-    #config_machine .email-option label {
-        width: 100%;
-        float: left;
-        padding: 0 0 4px 0;
-        display: none;
-    }
-
     #config_machine .email-option .column input,
     #config_machine .email-option textarea {
         width: 100%;
+    }
+
+    #config_machine .email-option select {
+        margin-right: 0;
+    }
+
+    #config_machine .email-option label {
+        display: none;
+    }
+
+    #config_machine .email-option .body .column {
+        width: 100%;
+        float: none;
+    }
+
+    #config_machine .email-option .body .foot {
+        padding-top: 0;
+        border-top: none;
     }
 
 
@@ -1818,22 +1855,7 @@ h1 a {
     }
 
 
-    /* step 5 */
-    #config_machine .email-option label {
-        display: none;
-    }
 
-
-    #config_machine .email-option .body .column {
-        width: 100%;
-        float: none;
-        padding-bottom: 0;
-    }
-
-    #config_machine .email-option .body .foot {
-        padding-top: 0;
-        border-top: none;
-    }
 
 
 }
